some edit for api